crates/formatter/tests/snapshots/snapshots__coder__migrations__000402_workspace_app_statuses_app_id_index.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop index if exists workspace_app_statuses_app_id_idx;
