crates/formatter/tests/snapshots/snapshots__coder__migrations__000404_allow_same_role_name_in_different_orgs.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Fix the unique index in `custom_roles` to allow the same role name
-- in different organizations. The original index only covered name,
-- but names don't have to be unique across different organizations.
--
-- Note: after fixing it, we end up with an almost-replica of the
-- existing `custom_roles_unique_key` constraint. That's unfortunate,
-- but since we can't define a constraint on an expression (e.g. lower()),
-- we'll have to keep both of them.
drop index if exists idx_custom_roles_name_lower;

-- Use `COALESCE` to handle `NULL` organization_id. Site-wide custom
-- roles are currently not used, but that can change in the future and
-- this will become necessary. And there are no performance implications.
--
-- Note: Using `NULLS NOT DISTINCT` instead of `COALESCE` here would
-- limit us to PG15+.

-- Paranoia check.
update custom_roles
set organization_id = null
where organization_id = '00000000-0000-0000-0000-000000000000';

alter table custom_roles
	add constraint organization_id_not_zero
		check (organization_id <> '00000000-0000-0000-0000-000000000000'::uuid);

create unique index idx_custom_roles_name_lower_organization_id
	on custom_roles
	using btree(
		lower(name),
		coalesce(organization_id, '00000000-0000-0000-0000-000000000000'::uuid)
	);
