crates/formatter/tests/snapshots/snapshots__coder__migrations__000406_add_system_role_support.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table custom_roles drop column if exists member_permissions;

alter table custom_roles drop column if exists is_system;
