crates/formatter/tests/snapshots/snapshots__coder__migrations__000410_remove_tailnet_v1_tables.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Restore tailnet v1 API tables (unused, but required for rollback).

-- Create tables.
create table tailnet_clients (
	id uuid not null,
	coordinator_id uuid not null,
	updated_at timestamp with time zone not null,
	node jsonb not null,
	primary key (id, coordinator_id),
	foreign key (coordinator_id) references tailnet_coordinators (id)
		on delete cascade
);

create table tailnet_agents (
	id uuid not null,
	coordinator_id uuid not null,
	updated_at timestamp with time zone not null,
	node jsonb not null,
	primary key (id, coordinator_id),
	foreign key (coordinator_id) references tailnet_coordinators (id)
		on delete cascade
);

create table tailnet_client_subscriptions (
	client_id uuid not null,
	coordinator_id uuid not null,
	agent_id uuid not null,
	updated_at timestamp with time zone not null,
	primary key (client_id, coordinator_id, agent_id),
	foreign key (coordinator_id) references tailnet_coordinators (id)
		on delete cascade
);

-- Create indexes.
create index idx_tailnet_agents_coordinator
	on tailnet_agents
	using btree(coordinator_id);
create index idx_tailnet_clients_coordinator
	on tailnet_clients
	using btree(coordinator_id);

-- Create trigger functions.
create function tailnet_notify_agent_change()
returns trigger
language plpgsql
as $$
begin
	if (OLD is not null) then
		perform pg_notify('tailnet_agent_update', OLD.id::text);
		return null;
	end if;
	if (NEW is not null) then
		perform pg_notify('tailnet_agent_update', NEW.id::text);
		return null;
	end if;
end;
$$;

create function tailnet_notify_client_change()
returns trigger
language plpgsql
as $$
declare
	var_client_id uuid;
	var_coordinator_id uuid;
	var_agent_ids uuid[];
	var_agent_id uuid;
begin
	if (NEW.id is not null) then
		var_client_id = NEW.id;
		var_coordinator_id = NEW.coordinator_id;
	elsif (OLD.id is not null) then
		var_client_id = OLD.id;
		var_coordinator_id = OLD.coordinator_id;
	end if;

	-- Read all agents the client is subscribed to, so we can notify them.
	select array_agg(agent_id)
	into var_agent_ids
	from tailnet_client_subscriptions subs
	where subs.client_id = NEW.id and subs.coordinator_id = NEW.coordinator_id;

	-- No agents to notify
	if (var_agent_ids is null) then
		return null;
	end if;

	-- pg_notify is limited to 8k bytes, which is approximately 221 UUIDs.
	-- Instead of sending all agent ids in a single update, send one for each
	-- agent id to prevent overflow.
	foreach var_agent_id in array var_agent_ids loop
		perform pg_notify(
			'tailnet_client_update',
			var_client_id || ',' || var_agent_id
		);
	end loop;

	return null;
end;
$$;

create function tailnet_notify_client_subscription_change()
returns trigger
language plpgsql
as $$
begin
	if (NEW is not null) then
		perform pg_notify(
			'tailnet_client_update',
			NEW.client_id || ',' || NEW.agent_id
		);
		return null;
	elsif (OLD is not null) then
		perform pg_notify(
			'tailnet_client_update',
			OLD.client_id || ',' || OLD.agent_id
		);
		return null;
	end if;
end;
$$;

-- Create triggers.
create trigger tailnet_notify_agent_change
	after insert or delete or update on tailnet_agents
	for each row
	execute function tailnet_notify_agent_change();

create trigger tailnet_notify_client_change
	after insert or delete or update on tailnet_clients
	for each row
	execute function tailnet_notify_client_change();

create trigger tailnet_notify_client_subscription_change
	after insert or delete or update on tailnet_client_subscriptions
	for each row
	execute function tailnet_notify_client_subscription_change();
